[project]
name = "rs-trainer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altgraph==0.17.4",
    "certifi==2025.4.26",
    "charset-normalizer==3.4.2",
    "idna==3.10",
    "keyboard==0.13.5",
    "packaging==25.0",
    "pefile==2023.2.7",
    "pygame==2.6.1",
    "pyinstaller==6.13.0",
    "pyinstaller-hooks-contrib==2025.4",
    "pywin32==310",
    "pywin32-ctypes==0.2.3",
    "requests==2.32.3",
    "urllib3==2.4.0",
]

[project.scripts]
rstrainer = "main:main"

[build-system]
requires = ["setuptools>=78.1.0", "wheel>=0.45.1"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []
